<resources>
    <string name="app_name">Пожарная инспекция</string>
    <string name="login_tvRegestration">Нет аккаунта? Регистрация.</string>
    <string name="login_et_email">E-mail:</string>
    <string name="login_et_pass">Password:</string>
    <string name="login_button">Войти в аккаунт</string>

    <string name="registration_et_surname">Фаимилия:</string>
    <string name="registration_et_name">Имя:</string>
    <string name="registration_et_telefon">Номер телефона:</string>
    <string name="registration_button_next">Далее</string>
    <string name="registration_et_email">E-mail:</string>
    <string name="registration_et_pass">Password:</string>
    <string name="registration_et_repeat_pass">Повторите пароль:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--<string name=""></string>-->
</resources>