<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".Regestration_activity">

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="300dp"
        android:layout_height="285dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <EditText
                android:id="@+id/registration_etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/back_login_edit_text"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:hint="@string/registration_et_surname"
                android:inputType="text"
                android:padding="15dp" />
            <EditText
                android:id="@+id/registration_etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/back_login_edit_text"
                android:ems="10"
                android:hint="@string/registration_et_name"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="15dp" />
            <EditText
                android:id="@+id/registration_etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/back_login_edit_text"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:hint="@string/registration_et_telefon"
                android:inputType="phone"
                android:padding="15dp" />

            <Button
                android:id="@+id/registration_bNext"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/main_orange"
                android:padding="8dp"
                android:text="@string/registration_button_next"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registration_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:background="@drawable/back_login_edit_text"
                android:padding="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/registration_et_email"

                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registration_etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:background="@drawable/back_login_edit_text"
                android:padding="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/registration_et_pass"

                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registration_etRepeatPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/back_login_edit_text"
                android:padding="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/registration_et_repeat_pass"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registration_bFinish"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/main_orange"
                android:padding="8dp"
                android:text="@string/registration_button_next"
                android:textColor="@color/black" />


        </LinearLayout>

    </ViewFlipper>
</androidx.constraintlayout.widget.ConstraintLayout>