<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".log_in_Kotlin">

    <Button
        android:id="@+id/button"
        android:layout_width="222dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_button"
        android:backgroundTint="#ffba42"
        app:layout_constraintEnd_toEndOf="@+id/Reg_et_pass"
        app:layout_constraintStart_toStartOf="@+id/Reg_et_pass"
        app:layout_constraintTop_toBottomOf="@+id/Reg_et_pass" />

    <EditText
        android:id="@+id/Reg_et_email"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:background="@drawable/edit_text_padd"
        android:ems="10"
        android:hint="@string/login_et_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/Reg_et_pass"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/edit_text_padd"
        android:ems="10"
        android:hint="@string/login_et_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Reg_et_email"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/Reg_et_email"
        app:layout_constraintTop_toBottomOf="@+id/Reg_et_email"
        app:layout_constraintVertical_bias="0.142" />

</androidx.constraintlayout.widget.ConstraintLayout>